Update turkish translations
(Old svn revision: 3778)

--- a/po/tr.po
+++ b/po/tr.po
@@ -7,13 +7,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel\n"
 "POT-Creation-Date: 2003-07-10 10:18+0200\n"
-"PO-Revision-Date: 2003-05-21 20:32+0300\n"
+"PO-Revision-Date: 2003-07-16 20:51+0300\n"
 "Last-Translator: Erçin EKER <erc.caldera@gmx.net>\n"
-"Language-Team: Turkish <>\n"
+"Language-Team: Turkish <tr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
+"X-Generator: KBabel 1.2\n"
 
 #: panel/xfce_support.c:648
 msgid "Select file"
@@ -21,7 +21,7 @@ msgstr "Dosya seç"
 
 #: panel/controls_dialog.c:246
 msgid "Change item"
-msgstr "Nesne Değiştir"
+msgstr "Nesneyi değiştir"
 
 #: panel/controls_dialog.c:278 panel/item_dialog.c:650
 msgid "Position:"
@@ -39,7 +39,7 @@ msgstr ""
 
 #: panel/item_dialog.c:317
 msgid "Other Icon"
-msgstr "Diğer Simgeler"
+msgstr "Diğer Simge"
 
 #: panel/item_dialog.c:342
 msgid "Select icon"
@@ -74,13 +74,12 @@ msgid "Tooltip:"
 msgstr "İpucu:"
 
 #: panel/item_dialog.c:596
-#, fuzzy
 msgid "Menu:"
-msgstr "Menü"
+msgstr "Menü:"
 
 #: panel/item_dialog.c:603
 msgid "Attach menu to launcher"
-msgstr ""
+msgstr "Başlatıcıya menü ekle"
 
 #: panel/item_dialog.c:745
 msgid "Icon Preview"
@@ -207,7 +206,7 @@ msgstr "Oyunlar"
 
 #: panel/icons.c:78
 msgid "Help browser"
-msgstr "Yardım tarayıcısı"
+msgstr "Yardım Merkezi"
 
 #: panel/icons.c:79
 msgid "Multimedia"
@@ -219,7 +218,7 @@ msgstr "Ağ"
 
 #: panel/icons.c:81
 msgid "Graphics"
-msgstr "Grafikler"
+msgstr "Grafik"
 
 #: panel/icons.c:82
 msgid "Printer"
@@ -293,11 +292,11 @@ msgstr "Panel boyutu:"
 
 #: settings/xfce_settings_dialog.c:382
 msgid "Panel orientation:"
-msgstr "Panel uyumu:"
+msgstr "Panel yönelimi:"
 
 #: settings/xfce_settings_dialog.c:399
 msgid "Popup position:"
-msgstr "Popup pozisyonu:"
+msgstr "Popup konumu:"
 
 #: settings/xfce_settings_dialog.c:416
 msgid "Icon theme:"
@@ -305,7 +304,7 @@ msgstr "Simge teması:"
 
 #: settings/xfce_settings_dialog.c:487
 msgid "Panel layer:"
-msgstr "Panel tabakası:"
+msgstr "Panel katmanı:"
 
 #: settings/xfce_settings_dialog.c:507
 msgid "Normal"
@@ -313,7 +312,7 @@ msgstr "Normal"
 
 #: settings/xfce_settings_dialog.c:527
 msgid "Center the panel:"
-msgstr "Paneli merkeze götür:"
+msgstr "Paneli ortala:"
 
 #: settings/xfce_settings_dialog.c:551
 msgid "Set"
@@ -321,7 +320,7 @@ msgstr "Uygula"
 
 #: settings/xfce_settings_dialog.c:587
 msgid "Autohide:"
-msgstr "Oto Gizleme:"
+msgstr "Otomatik Gizleme:"
 
 #: settings/xfce_settings_dialog.c:655
 msgid "XFce Panel Settings"
@@ -428,7 +427,7 @@ msgstr "Analog"
 
 #: plugins/clock/clock.c:367
 msgid "Digital"
-msgstr "Dijital"
+msgstr "Sayısal"
 
 #: plugins/clock/clock.c:371
 msgid "LED"
@@ -518,7 +517,7 @@ msgstr "Sistem düğmeleri"
 
 #: plugins/separator/separator.c:153
 msgid "Separator"
-msgstr ""
+msgstr "Ayırıcı"
 
 #: plugins/mailcheck/mailcheck.c:539
 msgid "Mail box:"
@@ -540,11 +539,3 @@ msgstr "Gecikme (sn):"
 msgid "Mail check"
 msgstr "Posta denetimi"
 
-#~ msgid "_Done"
-#~ msgstr "_Oldu"
-
-#~ msgid "_Revert"
-#~ msgstr "_Eski Durumuna Getir"
-
-#~ msgid "Type:"
-#~ msgstr "Tür:"
