--- a/po/fi.po
+++ b/po/fi.po
@@ -1,8 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# Ilkka Ollakka <ilkka.j.ollakka@students.oamk.fi>, 2003
 msgid ""
 msgstr ""
 "Project-Id-Version: XFCE4\n"
@@ -459,7 +458,7 @@ msgstr "Xfce Kello"
 
 #: plugins/pager/pager.c:277
 msgid "Graphical pager"
-msgstr "Käytä graafista työpöydän vaihtajaa"
+msgstr "Graafinen työpöydän vaihtajaa"
 
 #: plugins/switcher/switcher.c:696
 msgid "Desktop switcher"
