--- a/po/ru.po
+++ b/po/ru.po
@@ -1,117 +1,132 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# translation of ru.po to Russian
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
+# Poul Ionkin <wizzard@nmg.lv>, 2003.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4\n"
-"POT-Creation-Date: 2003-07-19 10:02+0200\n"
-"PO-Revision-Date: 2003-07-16 18:04+0300\n"
-"Last-Translator: Dan Korostelev <digger_temp@netman.ru>\n"
-"Language-Team: Dan Korostelev <daniel@ats.energo.ru>\n"
+"Project-Id-Version: ru\n"
+"POT-Creation-Date: 2003-07-03 10:52+0200\n"
+"PO-Revision-Date: 2003-07-18 00:26+0000\n"
+"Last-Translator: Poul Ionkin <wizzard@nmg.lv>\n"
+"Language-Team: Russian <none>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
+"X-Generator: KBabel 1.2beta2\n"
 
 #: panel/xfce_support.c:648
 msgid "Select file"
-msgstr "Выбор файла"
+msgstr "Выберите файл"
 
-#: panel/controls_dialog.c:246
+#: panel/controls_dialog.c:267
 msgid "Change item"
-msgstr ""
+msgstr "Изменение объекта"
 
-#: panel/controls_dialog.c:278 panel/item_dialog.c:650
+#: panel/controls_dialog.c:275 panel/item_dialog.c:1004
+msgid "_Revert"
+msgstr "Перевернуть"
+
+#: panel/controls_dialog.c:280 panel/item_dialog.c:1010
+msgid "_Done"
+msgstr "Готово"
+
+#: panel/controls_dialog.c:304
+msgid "Type:"
+msgstr "Тип:"
+
+#: panel/controls_dialog.c:320 panel/item_dialog.c:609
 msgid "Position:"
-msgstr "Расположение:"
+msgstr "Позиция:"
 
-#: panel/controls_dialog.c:323 panel/controls.c:272
+#: panel/controls_dialog.c:366 panel/controls.c:272
 msgid ""
 "Removing an item will also remove its popup menu.\n"
 "\n"
 "Do you want to remove the item?"
 msgstr ""
-"Удаление этого обьекта повлечет удаление его всплывающего меню.\n"
+"При удалении объекта будет удалено всплывающее меню.\n"
 "\n"
-"Вы уверены, что хотите удалить обьект?"
+"Удалить объект?"
 
-#: panel/item_dialog.c:317
+#: panel/item_dialog.c:279
 msgid "Other Icon"
-msgstr "Другой значок"
+msgstr "Другие иконки"
+
+#: panel/item_dialog.c:304
+msgid "Select icon"
+msgstr "Выберите иконку"
 
 #: panel/item_dialog.c:342
-msgid "Select icon"
-msgstr "Выбор значка"
-
-#: panel/item_dialog.c:381
 msgid "Icon:"
-msgstr "Значок:"
+msgstr "Иконка:"
 
-#: panel/item_dialog.c:430
+#: panel/item_dialog.c:387
 msgid "Select command"
-msgstr "Выбор комманды"
+msgstr "Выберите команду"
 
-#: panel/item_dialog.c:458
+#: panel/item_dialog.c:414
 msgid "Command:"
-msgstr "Комманда:"
+msgstr "Команда:"
 
-#: panel/item_dialog.c:495 plugins/mailcheck/mailcheck.c:668
+#: panel/item_dialog.c:447 plugins/mailcheck/mailcheck.c:679
 msgid "Run in _terminal"
-msgstr "Запуск в терминале"
+msgstr "Выполнить в терминале"
 
-#: panel/item_dialog.c:500 plugins/mailcheck/mailcheck.c:676
+#: panel/item_dialog.c:452 plugins/mailcheck/mailcheck.c:687
 msgid "Use startup _notification"
-msgstr "Оповещение о запуске"
+msgstr "Использовать область уведомления"
 
-#: panel/item_dialog.c:527
+#: panel/item_dialog.c:479
 msgid "Caption:"
-msgstr "Название:"
+msgstr "Заголовок:"
 
-#: panel/item_dialog.c:560
+#: panel/item_dialog.c:518
 msgid "Tooltip:"
 msgstr "Подсказка:"
 
-#: panel/item_dialog.c:596
+#: panel/item_dialog.c:554
 msgid "Menu:"
 msgstr "Меню:"
 
-#: panel/item_dialog.c:603
+#: panel/item_dialog.c:561
 msgid "Attach menu to launcher"
-msgstr "Добавить всплывающее меню"
+msgstr "Добавить меню к запуску"
 
-#: panel/item_dialog.c:745
+#: panel/item_dialog.c:704
 msgid "Icon Preview"
-msgstr "Просмотр значка:"
+msgstr "Просмотр иконки"
 
-#: panel/item_dialog.c:749
+#: panel/item_dialog.c:708
 msgid "Drag file onto this frame to change the icon"
-msgstr "Перетащите файл в эту область, чтобы изменить значок"
+msgstr "Перетащите файл в эту рамку, чтобы изменить иконку"
 
-#: panel/item_dialog.c:1032
+#. create dialog
+#: panel/item_dialog.c:993
 msgid "Change menu item"
-msgstr "Изменение пункта меню"
+msgstr "Изменение элемента меню"
 
 #. add buttons
-#: panel/item_dialog.c:1035
+#: panel/item_dialog.c:998
 msgid "Remove"
-msgstr "Убрать"
+msgstr "Удалить"
 
-#: panel/item.c:441
+#: panel/item.c:352
 msgid "Click mouse button 3 to change item"
-msgstr ""
+msgstr "Нажмите на 3 клавишу мышки для редактирования объекта"
 
-#: panel/item.c:464
+#: panel/item.c:374
 msgid "Add launcher"
-msgstr "Добавить"
+msgstr "Добавить запуск"
 
-#: panel/item.c:469
+#: panel/item.c:379
 msgid "Add new item"
-msgstr "Добавить новый пункт"
+msgstr "Добавить новый объект"
 
-#: panel/item.c:601
+#: panel/item.c:509
 msgid "Launcher"
-msgstr "Ярлык"
+msgstr "Запуск"
 
 #: panel/main.c:129
 msgid "Are you sure you want to exit?"
@@ -125,7 +140,7 @@ msgid ""
 "http://www.xfce.org\n"
 msgstr ""
 "%s, версия %s\n"
-"Часть XFce Desktop Environement\n"
+"Часть рабочей среды XFce\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:275
@@ -134,13 +149,12 @@ msgid ""
 "defined on http://www.freedesktop.org. \n"
 "Some XFce features may not work as intended."
 msgstr ""
-"Похоже, ваш оконный менеджер не поддерживает новые вещицы, описанные на "
-"http://www.freedesktop.org.\n"
-"Некоторые возможности XFce могут не работать как следует."
+"Ваш оконый менеджер не поддерживает подсказки, которые определены на сайте http://www.freedesktop.org. \n "
+"Возможно не будут работать некоторые функции XFce."
 
 #: panel/controls.c:320 panel/panel.c:123
 msgid "/Add _new item"
-msgstr "/Добавить"
+msgstr "/Добавить новый объект"
 
 #: panel/controls.c:322 panel/panel.c:125
 msgid "/_Properties..."
@@ -172,7 +186,7 @@ msgstr "/Помощь"
 
 #: panel/panel.c:131
 msgid "/_Lock screen"
-msgstr "/Запереть экран"
+msgstr "/Блокировать экран"
 
 #: panel/panel.c:132
 msgid "/E_xit"
@@ -185,7 +199,7 @@ msgstr "Панель XFce"
 
 #: panel/icons.c:73
 msgid "Default"
-msgstr "По умолчанию"
+msgstr "Стандартная"
 
 #: panel/icons.c:74
 msgid "Editor"
@@ -193,7 +207,7 @@ msgstr "Редактор"
 
 #: panel/icons.c:75
 msgid "File management"
-msgstr "Управление файлами"
+msgstr "Организация файлов"
 
 #: panel/icons.c:76
 msgid "Utilities"
@@ -205,11 +219,11 @@ msgstr "Игры"
 
 #: panel/icons.c:78
 msgid "Help browser"
-msgstr "Просмотр помощи"
+msgstr "Информационная справка"
 
 #: panel/icons.c:79
 msgid "Multimedia"
-msgstr "Мультимедиа"
+msgstr "Мультимедия"
 
 #: panel/icons.c:80
 msgid "Network"
@@ -225,7 +239,7 @@ msgstr "Принтер"
 
 #: panel/icons.c:83
 msgid "Productivity"
-msgstr ""
+msgstr "Производительность"
 
 #: panel/icons.c:84
 msgid "Sound"
@@ -237,7 +251,7 @@ msgstr "Терминал"
 
 #: panel/mcs_client.c:208
 msgid "Settings manager not available"
-msgstr "Менеджер сеансов не доступен"
+msgstr "Менеджер настроек не доступен"
 
 #: panel/popup.c:255
 msgid "Menu"
@@ -261,11 +275,11 @@ msgstr "Большой"
 
 #: settings/xfce_settings_dialog.c:182
 msgid "Horizontal"
-msgstr "Горизонтально"
+msgstr "По горизонтали"
 
 #: settings/xfce_settings_dialog.c:186
 msgid "Vertical"
-msgstr "Вертикально"
+msgstr "По вертикали"
 
 #: settings/xfce_settings_dialog.c:218 settings/xfce_settings_dialog.c:448
 msgid "Left"
@@ -278,12 +292,12 @@ msgstr "Справа"
 #: settings/xfce_settings_dialog.c:226 settings/xfce_settings_dialog.c:447
 #: settings/xfce_settings_dialog.c:503
 msgid "Top"
-msgstr "Верхний"
+msgstr "Сверху"
 
 #: settings/xfce_settings_dialog.c:230 settings/xfce_settings_dialog.c:446
 #: settings/xfce_settings_dialog.c:511
 msgid "Bottom"
-msgstr "Нижний"
+msgstr "Снизу"
 
 #: settings/xfce_settings_dialog.c:366
 msgid "Panel size:"
@@ -291,35 +305,35 @@ msgstr "Размер панели:"
 
 #: settings/xfce_settings_dialog.c:382
 msgid "Panel orientation:"
-msgstr "Направление панели:"
+msgstr "Положение панели:"
 
 #: settings/xfce_settings_dialog.c:399
 msgid "Popup position:"
-msgstr "Расположение кнопки меню:"
+msgstr "Всплывающее меню:"
 
 #: settings/xfce_settings_dialog.c:416
 msgid "Icon theme:"
-msgstr "Тема значков:"
+msgstr "Тема иконок:"
 
 #: settings/xfce_settings_dialog.c:487
 msgid "Panel layer:"
-msgstr "Слой панели:"
+msgstr "Расположение панели:"
 
 #: settings/xfce_settings_dialog.c:507
 msgid "Normal"
-msgstr "Обычный"
+msgstr "Обычное"
 
 #: settings/xfce_settings_dialog.c:527
 msgid "Center the panel:"
-msgstr "Центрирование:"
+msgstr "Центр панели:"
 
 #: settings/xfce_settings_dialog.c:551
 msgid "Set"
-msgstr ""
+msgstr "Установить"
 
 #: settings/xfce_settings_dialog.c:587
 msgid "Autohide:"
-msgstr "Автоматически скрывать:"
+msgstr "Автоматически прятать:"
 
 #: settings/xfce_settings_dialog.c:655
 msgid "XFce Panel Settings"
@@ -333,12 +347,12 @@ msgstr "Внешний вид"
 #. Position
 #: settings/xfce_settings_dialog.c:688
 msgid "Position"
-msgstr "Расположение"
+msgstr "Позиция"
 
 #. autohide
 #: settings/xfce_settings_dialog.c:704
 msgid "Behaviour"
-msgstr "Появление"
+msgstr "Режим работы"
 
 #: plugins/clock/clock.c:57
 msgid "Sunday"
@@ -358,7 +372,7 @@ msgstr "Среда"
 
 #: plugins/clock/clock.c:61
 msgid "Thursday"
-msgstr "Четверг"
+msgstr "Черверг"
 
 #: plugins/clock/clock.c:62
 msgid "Friday"
@@ -370,99 +384,99 @@ msgstr "Суббота"
 
 #: plugins/clock/clock.c:67
 msgid "January"
-msgstr "января"
+msgstr "Январь"
 
 #: plugins/clock/clock.c:68
 msgid "February"
-msgstr "февраля"
+msgstr "Февраль"
 
 #: plugins/clock/clock.c:69
 msgid "March"
-msgstr "марта"
+msgstr "Март"
 
 #: plugins/clock/clock.c:70
 msgid "April"
-msgstr "апреля"
+msgstr "Апрель"
 
 #: plugins/clock/clock.c:71
 msgid "May"
-msgstr "мая"
+msgstr "Май"
 
 #: plugins/clock/clock.c:72
 msgid "June"
-msgstr "июня"
+msgstr "Июнь"
 
 #: plugins/clock/clock.c:73
 msgid "July"
-msgstr "июля"
+msgstr "Июль"
 
 #: plugins/clock/clock.c:74
 msgid "August"
-msgstr "августа"
+msgstr "Август"
 
 #: plugins/clock/clock.c:75
 msgid "September"
-msgstr "сентября"
+msgstr "Сентябрь"
 
 #: plugins/clock/clock.c:76
 msgid "October"
-msgstr "октября"
+msgstr "Октябрь"
 
 #: plugins/clock/clock.c:77
 msgid "November"
-msgstr "ноября"
+msgstr "Ноябрь"
 
 #: plugins/clock/clock.c:78
 msgid "December"
-msgstr "декабря"
+msgstr "Декабрь"
 
-#: plugins/clock/clock.c:350
+#: plugins/clock/clock.c:353
 msgid "Clock type:"
-msgstr "Тип часов"
+msgstr "Тип часов:"
 
-#: plugins/clock/clock.c:363
+#: plugins/clock/clock.c:366
 msgid "Analog"
 msgstr "Аналоговые"
 
-#: plugins/clock/clock.c:367
+#: plugins/clock/clock.c:370
 msgid "Digital"
-msgstr "Цифровые"
+msgstr "Электронные"
 
-#: plugins/clock/clock.c:371
+#: plugins/clock/clock.c:374
 msgid "LED"
-msgstr "ЖК"
+msgstr "LED"
 
-#: plugins/clock/clock.c:433
+#: plugins/clock/clock.c:439
 msgid "Hour mode:"
-msgstr "Режим часа:"
+msgstr "Стиль:"
 
-#: plugins/clock/clock.c:440
+#: plugins/clock/clock.c:446
 msgid "24 hour"
 msgstr "24 часа"
 
-#: plugins/clock/clock.c:446
+#: plugins/clock/clock.c:452
 msgid "12 hour"
 msgstr "12 часов"
 
-#: plugins/clock/clock.c:452
+#: plugins/clock/clock.c:458
 msgid "AM/PM"
 msgstr "AM/PM"
 
-#: plugins/clock/clock.c:490
+#: plugins/clock/clock.c:498
 msgid "Show seconds:"
 msgstr "Показывать секунды:"
 
-#: plugins/clock/clock.c:599
+#: plugins/clock/clock.c:609
 msgid "Xfce Clock"
-msgstr "Часы XFce"
+msgstr "Часы Xfce"
 
-#: plugins/pager/pager.c:277
+#: plugins/pager/pager.c:278
 msgid "Graphical pager"
 msgstr "Графический пейджер"
 
 #: plugins/switcher/switcher.c:696
 msgid "Desktop switcher"
-msgstr "Переключатель рабочих столов"
+msgstr "Переключатель"
 
 #: plugins/systembuttons/systembuttons.c:60
 msgid ""
@@ -470,51 +484,51 @@ msgid ""
 "\n"
 "Ask your system administrator for more information"
 msgstr ""
-"Доступ к системе конфигурации закрыт.\n"
+"Доступ к системе конфигурации запрещён.\n"
 "\n"
-"Обратитесь к вашему системному администратору"
+"Обратитесь к системному администратору"
 
-#: plugins/systembuttons/systembuttons.c:148
+#: plugins/systembuttons/systembuttons.c:150
 msgid "Lock the screen"
-msgstr "Заблокировать экран"
+msgstr "Блокировать экран"
 
-#: plugins/systembuttons/systembuttons.c:149
-#: plugins/systembuttons/systembuttons.c:586
+#: plugins/systembuttons/systembuttons.c:151
+#: plugins/systembuttons/systembuttons.c:591
 msgid "Exit"
 msgstr "Выход"
 
-#: plugins/systembuttons/systembuttons.c:150
-#: plugins/systembuttons/systembuttons.c:587
+#: plugins/systembuttons/systembuttons.c:152
+#: plugins/systembuttons/systembuttons.c:592
 msgid "Setup"
 msgstr "Настройка"
 
-#: plugins/systembuttons/systembuttons.c:151
-#: plugins/systembuttons/systembuttons.c:588
+#: plugins/systembuttons/systembuttons.c:153
+#: plugins/systembuttons/systembuttons.c:593
 msgid "Info"
 msgstr "Информация"
 
-#: plugins/systembuttons/systembuttons.c:568
+#: plugins/systembuttons/systembuttons.c:573
 msgid "Show two buttons:"
 msgstr "Показывать две кнопки:"
 
 #. set names to use in option menus
-#: plugins/systembuttons/systembuttons.c:585
+#: plugins/systembuttons/systembuttons.c:590
 msgid "Lock"
-msgstr "Блокировка экрана"
+msgstr "Блокировать"
 
-#: plugins/systembuttons/systembuttons.c:617
+#: plugins/systembuttons/systembuttons.c:622
 msgid "Button 1:"
 msgstr "Кнопка 1:"
 
-#: plugins/systembuttons/systembuttons.c:633
+#: plugins/systembuttons/systembuttons.c:638
 msgid "Button 2:"
 msgstr "Кнопка 2:"
 
-#: plugins/systembuttons/systembuttons.c:668
+#: plugins/systembuttons/systembuttons.c:677
 msgid "System buttons"
 msgstr "Системные кнопки"
 
-#: plugins/separator/separator.c:153
+#: plugins/separator/separator.c:147
 msgid "Separator"
 msgstr "Разделитель"
 
@@ -522,18 +536,19 @@ msgstr "Разделитель"
 msgid "Mail box:"
 msgstr "Почтовый ящик:"
 
-#: plugins/mailcheck/mailcheck.c:623
+#: plugins/mailcheck/mailcheck.c:632
 msgid "Mail command:"
-msgstr "Комманда:"
+msgstr "Команда:"
 
-#: plugins/mailcheck/mailcheck.c:637
+#: plugins/mailcheck/mailcheck.c:646
 msgid "Command to run when the button on the panel is clicked"
-msgstr ""
+msgstr "Выполнить команду при нажатии кнопки на панели"
 
-#: plugins/mailcheck/mailcheck.c:706
+#: plugins/mailcheck/mailcheck.c:719
 msgid "Interval (sec):"
-msgstr "Интервал (в секундах):"
+msgstr "Интервал (сек):"
 
-#: plugins/mailcheck/mailcheck.c:778
+#: plugins/mailcheck/mailcheck.c:796
 msgid "Mail check"
 msgstr "Проверка почты"
+
