Updated german translations
(Old svn revision: 3813)

--- a/po/de.po
+++ b/po/de.po
@@ -2,12 +2,12 @@
 # Copyright (C) 2003 Olivier Fourdan
 # This file is distributed under the same license as the xfce4-panel package.
 # Moritz Heiber <moritz-heiber@arcor.de>, 2003
-#
+
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 1.0.0\n"
 "POT-Creation-Date: 2003-07-30 09:20+0200\n"
-"PO-Revision-Date: 2003-07-03 14:23+0100\n"
+"PO-Revision-Date: 2003-08-05 18:35+0200\n"
 "Last-Translator: Moritz Heiber <moritz-heiber@arcor.de>\n"
 "Language-Team: none <none@none>\n"
 "MIME-Version: 1.0\n"
@@ -74,7 +74,6 @@ msgid "Tooltip:"
 msgstr "Tooltip:"
 
 #: panel/item_dialog.c:596
-#, fuzzy
 msgid "Menu:"
 msgstr "Menü:"
 
@@ -88,20 +87,19 @@ msgstr "Icon Vorschau"
 
 #: panel/item_dialog.c:749
 msgid "Drag file onto this frame to change the icon"
-msgstr "Dateien auf diesen Rahmen ziehen um das Icon zu verändern"
+msgstr "Dateien auf diesen Rahmen ziehen, um das Icon zu verändern"
 
 #: panel/item_dialog.c:1031
 msgid "Change menu item"
 msgstr "Menüobjekt verändern"
 
-#. add buttons
 #: panel/item_dialog.c:1034
 msgid "Remove"
 msgstr "Entfernen"
 
 #: panel/item.c:441
 msgid "Click mouse button 3 to change item"
-msgstr "Maustaste 3 zum verändern des Objekts benutzen"
+msgstr "Maustaste 3 zum Verändern des Objekts benutzen"
 
 #: panel/item.c:464
 msgid "Add launcher"
@@ -117,7 +115,7 @@ msgstr "Starter"
 
 #: panel/main.c:129
 msgid "Are you sure you want to exit?"
-msgstr "Sind sie sicher, dass sie XFce beenden wollen?"
+msgstr "Sind Sie sicher, dass Sie XFce beenden wollen?"
 
 #: panel/main.c:259
 #, c-format
@@ -136,7 +134,7 @@ msgid ""
 "defined on http://www.freedesktop.org. \n"
 "Some XFce features may not work as intended."
 msgstr ""
-"Ihr Fenstermanager scheint nicht die neuen Fenstermanager Hints, wie sie auf "
+"Ihr Fenstermanager scheint nicht die neuen Fenstermanager-Hints, wie sie auf "
 "http://www.freedesktop.org definiert sind, zu unterstützen. \n"
 "Einige Funktionen von XFce könnten nicht wie erwartetet arbeiten"
 
@@ -226,7 +224,6 @@ msgid "Printer"
 msgstr "Drucker"
 
 #: panel/icons.c:83
-#, fuzzy
 msgid "Productivity"
 msgstr "Produktivität"
 
@@ -442,11 +439,11 @@ msgstr "Stundenmodus:"
 #: plugins/clock/clock.c:440
 #, fuzzy
 msgid "24 hour"
-msgstr "24 Std. Uhr:"
+msgstr "24 Std."
 
 #: plugins/clock/clock.c:446
 msgid "12 hour"
-msgstr "12 Std. Uhr"
+msgstr "12 Std."
 
 #: plugins/clock/clock.c:452
 msgid "AM/PM"
@@ -461,13 +458,12 @@ msgid "Xfce Clock"
 msgstr "XFce Uhr"
 
 #: plugins/pager/pager.c:277
-#, fuzzy
 msgid "Graphical pager"
-msgstr "Grafischen Pager benutzen"
+msgstr "Grafischer Pager"
 
 #: plugins/switcher/switcher.c:696
 msgid "Desktop switcher"
-msgstr "V. Desktop Schalter"
+msgstr "Desktop-Umschalter"
 
 #: plugins/systembuttons/systembuttons.c:60
 msgid ""
@@ -477,7 +473,7 @@ msgid ""
 msgstr ""
 "Der Zugriff auf das Konfigurationssystem wurde deaktiviert.\n"
 "\n"
-"Fragen sie ihren Systemadministrator für mehr Informationen"
+"Fragen Sie Ihren Systemadministrator für mehr Informationen"
 
 #: plugins/systembuttons/systembuttons.c:148
 msgid "Lock the screen"
@@ -537,27 +533,8 @@ msgstr "Kommando, welches beim Klicken auf das Panel ausgeführt wird"
 
 #: plugins/mailcheck/mailcheck.c:706
 msgid "Interval (sec):"
-msgstr "Intervall (sek):"
+msgstr "Intervall (Sek.):"
 
 #: plugins/mailcheck/mailcheck.c:778
 msgid "Mail check"
 msgstr "Mailcheck"
-
-#~ msgid "_Done"
-#~ msgstr "_Fertig"
-
-#~ msgid "_Revert"
-#~ msgstr "_Rückgängig"
-
-#~ msgid "Type:"
-#~ msgstr "Typ:"
-
-#, fuzzy
-#~ msgid "Add item"
-#~ msgstr "Neues Objekt hinzufügen"
-
-#~ msgid "Select Item Type"
-#~ msgstr "Objekttyp auswählen"
-
-#~ msgid "Select an item type from the list"
-#~ msgstr "Ein Objekt aus der Liste auswählen"
