Update malaysian translations
(Old svn revision: 3828)

--- a/po/ms.po
+++ b/po/ms.po
@@ -5,9 +5,9 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfwm4 1.0.0\n"
+"Project-Id-Version: xfce4-panel 3.99.3\n"
 "POT-Creation-Date: 2003-08-26 08:23+0200\n"
-"PO-Revision-Date: 2003-05-21 02:24+0800\n"
+"PO-Revision-Date: 2003-08-31 13:00+0800\n"
 "Last-Translator: Harun Musa <mharun@gmx.net>\n"
 "Language-Team: Malay <translation-team-ms@list.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -55,7 +55,7 @@ msgstr "Pilih arahan"
 
 #: panel/item_dialog.c:461
 msgid "Command:"
-msgstr "Arahan"
+msgstr "Arahan:"
 
 #: panel/item_dialog.c:498 plugins/mailcheck/mailcheck.c:668
 msgid "Run in _terminal"
@@ -116,7 +116,7 @@ msgstr "Pelancar"
 
 #: panel/main.c:132
 msgid "Are you sure you want to exit?"
-msgstr "Adakah anda pasti untuk keluar"
+msgstr "Adakah anda pasti untuk keluar?"
 
 #: panel/main.c:268
 #, c-format
@@ -136,12 +136,12 @@ msgid ""
 "Some XFce features may not work as intended."
 msgstr ""
 "Pengrus tetingkap anda nampaknya tidak menyokong petua pengurus tetingkap "
-"barusebagai yang didefinasikan di http://www.freedesktop.org. \n"
+"baru sebagai yang didefinasikan di http://www.freedesktop.org. \n"
 "Sebahagian ciri-ciri XFce tidak bekerja seperti yang dikehendaki."
 
 #: panel/controls.c:320 panel/panel.c:123
 msgid "/Add _new item"
-msgstr "/Tambah item _baru"
+msgstr "/Tambah _item baru"
 
 #: panel/controls.c:322 panel/panel.c:125
 msgid "/_Properties..."
@@ -165,7 +165,7 @@ msgstr "/Pengurus _Tetapan"
 
 #: panel/panel.c:128
 msgid "/_About XFce"
-msgstr "/_Perihal XFce"
+msgstr "/Perih_al XFce"
 
 #: panel/panel.c:129
 msgid "/_Help"
@@ -517,7 +517,7 @@ msgstr "Bebutang sistem"
 
 #: plugins/separator/separator.c:153
 msgid "Separator"
-msgstr ""
+msgstr "Pemisah"
 
 #: plugins/mailcheck/mailcheck.c:539
 msgid "Mail box:"
@@ -529,7 +529,7 @@ msgstr "Arahan mel:"
 
 #: plugins/mailcheck/mailcheck.c:637
 msgid "Command to run when the button on the panel is clicked"
-msgstr "Arahan untuk larikan apabila bebutang padapanel diklik"
+msgstr "Arahan untuk larikan apabila bebutang pada panel diklik"
 
 #: plugins/mailcheck/mailcheck.c:706
 msgid "Interval (sec):"
@@ -538,21 +538,3 @@ msgstr "Interval (saat):"
 #: plugins/mailcheck/mailcheck.c:778
 msgid "Mail check"
 msgstr "Periksa mel"
-
-#~ msgid "_Done"
-#~ msgstr "_Selesai"
-
-#~ msgid "_Revert"
-#~ msgstr "_Revert"
-
-#~ msgid "Type:"
-#~ msgstr "Jenis:"
-
-#~ msgid "Add item"
-#~ msgstr "Tambah item"
-
-#~ msgid "Select Item Type"
-#~ msgstr "Pilih Jenis Item"
-
-#~ msgid "Select an item type from the list"
-#~ msgstr "Pilih jenis item dari senarai"
